24.08.19 adjust the classes of Utility not to violate the independence