@@ -28,8 +28,6 @@ public interface CompanyArticleTestUtility extends ObjectTestUtility {
             .date(LocalDate.of(2024, 6, 18))
             .importance(0)
             .build();
-    CompanyArticleDto testArticleDto = testArticle.toDto();
-    CompanyArticleDtoNoNumber testArticleDtoNoNumber = testArticle.toDtoNoNumber();
 
     CompanyArticle testNewArticle = CompanyArticle.builder()
             .name("[단독] 삼성전자 네트워크사업부 인력 700명 전환 배치")
@@ -49,7 +47,7 @@ public interface CompanyArticleTestUtility extends ObjectTestUtility {
             .importance(0)
             .build();
 
-    List<String> testStringArticle = Arrays.asList("삼성전자",
+    List<String> testStringArticle = List.of("삼성전자",
             String.join(System.lineSeparator(),
                     Arrays.asList("삼성전자도 현대차 이어 인도법인 상장 가능성, '코리아 디스카운트' 해소 기회",
                             "(2024-6-18, BUSINESS_POST)",
@@ -67,11 +65,11 @@ public interface CompanyArticleTestUtility extends ObjectTestUtility {
     }
 
     default CompanyArticleDto createTestArticleDto() {
-        return testArticleDto;
+        return testArticle.toDto();
     }
 
     default CompanyArticleDtoNoNumber createTestArticleDtoNoNumber() {
-        return testArticleDtoNoNumber;
+        return testArticle.toDtoNoNumber();
     }
 
     default CompanyArticle createTestNewArticle() {
